# TLPI

./: CMakeLists.txt  main.cpp
example/: myutils.h
example/brk/: brk  brk.cpp
example/check_passwd/: ckpasswd  ckpasswd.cpp
example/concat/: concat  concat.cpp
example/copy/: copy.cpp  copy.h
example/environ/: environ  environ.cpp
example/idshow/: idshow  idshow.cpp
example/iov/: iov.cpp
example/jmp/: jmp  jmp.cpp
example/process_time/: process_time  process_time.cpp
example/setenv/: setenv  setenv.cpp
example/showtime/: showtime  showtime.cpp
example/time/: time  time.cpp
